--- a/personal-website/src/data/projects.json
+++ b/personal-website/src/data/projects.json
@@ -46,7 +46,7 @@
       },
       {
         "type": "vimeo",
-        "videoId": "1145258441"
+        "videoId": "1145245710"
       },
       {
         "type": "image",
@@ -55,6 +55,10 @@
       {
         "type": "vimeo",
         "videoId": "1145250924"
+      },
+      {
+        "type": "vimeo",
+        "videoId": "1156797654"
       },
       {
         "type": "image",
